<resources>
    <string name="app_name">Sidebar</string>
    <!-- Menu header -->
    <string name="menu_header">Sidebar header example</string>
    <!-- Menu category 1 -->
    <string name="menu_item_camera">Camera</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="menu_item_audio">Audio</string>
    <string name="menu_item_video">Video</string>
    <string name="menu_item_slideshow">Slideshow</string>
    <!-- Menu category 2 -->
    <string name="menu_label_options">Options</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_close">Close</string>
</resources>
