<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_multimedia"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_item_gallery" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_audio"
            android:title="@string/menu_item_audio" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/menu_item_video" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_item_slideshow" />
    </group>
    <item
        android:id="@+id/nav_options"
        android:title="@string/menu_label_options" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_menu_profile"
                    android:title="@string/menu_item_profile" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/menu_item_settings" />
                <item
                    android:id="@+id/nav_close"
                    android:icon="@drawable/ic_menu_close"
                    android:title="@string/menu_item_close" />
            </group>
        </menu>
    </item>
</menu>
